Fix layout bug

--- a/src/assets/scss/modules/_main-header.scss
+++ b/src/assets/scss/modules/_main-header.scss
@@ -12,6 +12,7 @@ $main-header-height: 50px;
   left: 0;
   background-color: $color-primary-lt;
   color: $color-primary-contrast;
+  z-index: 999;
 
   .app-name {
     float: left;
